Fix issue with misaligned entry footer on mobile
Fixes #157

--- a/style.css
+++ b/style.css
@@ -2624,6 +2624,7 @@ input[type="submit"]:hover,input[type="submit"]:focus,button:hover,button:focus,
 	.entry-header > *,
 	.widget-area > *,
 	.entry-content > *,
+	.entry-footer > *,
 	.entry-list,
 	#primary .stylized-2col-section,
 	.site-main .posts-navigation,
